<resources>
    <string name="app_name">Roman History Quiz</string>
    <string name="enter_name">Name</string>
    <string name="question_1">1. Who led the rebellion against Rome in the Third Servile War?</string>
    <string name="q1_a1">Crassus</string>
    <string name="q1_a2">Spartacus</string>
    <string name="q1_a3">Crixus</string>
    <string name="question_2">2. Rome was founded on which hill?</string>
    <string name="q2_a1">Mars Hill</string>
    <string name="q2_a2">Latinum Hill</string>
    <string name="q2_a3">Palatine Hill</string>
    <string name="question_3">3. Who was killed on the Ides of March</string>
    <string name="q3_a1">Answer</string>
    <string name="question_4">4. Who did Rome fight in the Second Punic War?</string>
    <string name="q4_a1">Egypt</string>
    <string name="q4_a2">Greece</string>
    <string name="q4_a3">Carthage</string>
    <string name="question_5">5. Rome was located on what river?</string>
    <string name="q5_a1">Tiber River</string>
    <string name="q5_a2">Tigris River</string>
    <string name="q5_a3">Euphrates River</string>
    <string name="question_6">6. When did the Roman Empire split into East and West?</string>
    <string name="q6_a1">195 AD</string>
    <string name="q6_a2">285 AD</string>
    <string name="q6_a3">312 AD</string>
    <string name="question_7">7. What calendar month is named after Julius Caesar?</string>
    <string name="q7_a1">June</string>
    <string name="q7_a2">July</string>
    <string name="q7_a3">January</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="total">Total: </string>
    <string name="thank_you">Thank You</string>
</resources>
