<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName|textCapWords" />

        <TextView
            android:id="@+id/toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_1"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/q1_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/q1_a1"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q1_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/q1_a2"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q1_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:onClick="onCheckboxClicked"
                android:text="@string/q1_a3"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_2"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q2_a1" />

            <RadioButton
                android:id="@+id/q2_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q2_a2" />

            <RadioButton
                android:id="@+id/q2_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q2_a3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_3"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/enter_answer_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q3_a1"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/question_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_4"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q4_a1" />

            <RadioButton
                android:id="@+id/q4_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q4_a2" />

            <RadioButton
                android:id="@+id/q4_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q4_a3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_5"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q5_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q5_a1" />

            <RadioButton
                android:id="@+id/q5_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q5_a2" />

            <RadioButton
                android:id="@+id/q5_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q5_a3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_6"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q6_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q6_a1" />

            <RadioButton
                android:id="@+id/q6_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q6_a2" />

            <RadioButton
                android:id="@+id/q6_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q6_a3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_7"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q7_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q7_a1" />

            <RadioButton
                android:id="@+id/q7_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q7_a2" />

            <RadioButton
                android:id="@+id/q7_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/q7_a3" />
        </RadioGroup>

        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitQuiz"
            android:text="@string/submit_quiz" />

    </LinearLayout>
</ScrollView>
